# swc-plugin-jsx-dom-expressions

./: Cargo.toml
src/dom/: element.rs
src/shared/: component.rs
tests/fixture/babel/components/: output.js
tests/fixture/dynamic-string-children/: input.js  output.js
