[package]
name = "jsx-dom-expressions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
html-escape = "0.2.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
string_cache = "0.8.4"
swc_atoms = { version = "0.4.43", git = "https://github.com/icewind1991/swc", branch = "loader-browser-overwrite-old" }
swc_core = { version = "0.74", features = [
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "common",
], git = "https://github.com/icewind1991/swc", branch = "loader-browser-overwrite-old" }

[dev-dependencies]
testing = "0.31"
swc_core = { version = "0.74", features = [
  "testing_transform",
  "ecma_parser",
], git = "https://github.com/icewind1991/swc", branch = "loader-browser-overwrite-old" }
